--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,9 @@ android {
     androidExtensions {
         experimental = true
     }
+    kotlinOptions {
+        freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
+    }
 }
 
 ext {
