--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,7 @@ ext {
     androidKtx = "1.0.1"
     fragmentKtx = "1.0.0"
     constraintLayout = "2.0.0-alpha3"
-    lifecycle = "2.0.0"
+    lifecycle = "2.1.0-alpha04"
     room = "2.1.0-alpha05"
     workManager = "2.0.0"
     legacySupport = "1.0.0"
@@ -113,8 +113,6 @@ ext {
 
 dependencies {
     implementation "androidx.legacy:legacy-support-v4:$legacySupport"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanary"
 
@@ -147,6 +145,8 @@ dependencies {
 
     // ViewModel and LiveData
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle"
+
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle"
     testImplementation "androidx.arch.core:core-testing:$coreTesting"
     androidTestImplementation "androidx.arch.core:core-testing:$coreTesting"
