--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,12 +78,12 @@ android {
 
 ext {
     androidX = "1.0.2"
-    materialDesign = "1.0.0"
+    materialDesign = "1.1.0-alpha06"
     architectureComponents = "1.1.1"
     architectureComponentsExtensions = "1.1.1"
     androidKtx = "1.0.1"
     fragmentKtx = "1.0.0"
-    constraintLayout = "2.0.0-alpha3"
+    constraintLayout = "2.0.0-alpha4"
     lifecycle = "2.1.0-alpha04"
     room = "2.1.0-alpha05"
     workManager = "2.0.0"
