--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
     }
     buildTypes {
         debug {
+            pseudoLocalesEnabled true
         }
         release {
             minifyEnabled false
