Update pseudoLocalesEnabled value to false by default

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
     }
     buildTypes {
         debug {
-            pseudoLocalesEnabled true
+            pseudoLocalesEnabled false
         }
         release {
             minifyEnabled false
