Feature/add placeholder localization string files (#543)
* Add placeholder string bundles for 21 additional languages

* Flag `DuckDuckGo` app name as untranslateable

* Add support for pseudolocales

* Update pseudoLocalesEnabled value to false by default

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
     }
     buildTypes {
         debug {
+            pseudoLocalesEnabled false
         }
         release {
             minifyEnabled false
