--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
             androidTest.resources.srcDirs += files("$projectDir/../submodules/".toString())
         }
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
     signingConfigs {
         release
     }
