--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
             androidTest.resources.srcDirs += files("$projectDir/../submodules/".toString())
         }
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
     signingConfigs {
         release
     }
@@ -88,7 +91,7 @@ ext {
     constraintLayout = "2.0.0-beta1"
     lifecycle = "2.1.0-alpha04"
     room = "2.1.0"
-    workManager = "2.0.0"
+    workManager = "2.2.0"
     legacySupport = "1.0.0"
     espressoCore = "3.1.1"
     coreTesting = "2.0.0"
