--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,7 +86,7 @@ ext {
     materialDesign = "1.1.0-alpha05"
     architectureComponents = "1.1.1"
     architectureComponentsExtensions = "1.1.1"
-    androidKtx = "1.0.1"
+    androidKtx = "1.0.2"
     fragmentKtx = "1.0.0"
     constraintLayout = "2.0.0-beta1"
     lifecycle = "2.1.0-alpha04"
@@ -97,6 +97,7 @@ ext {
     coreTesting = "2.0.0"
     androidTestRunner = "1.0.2"
     testRunner = "1.1.1"
+    coroutines = "1.3.0-RC2"
 
     junit = "4.12"
     dagger = "2.18"
@@ -123,6 +124,7 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
     implementation "androidx.appcompat:appcompat:$androidX"
     implementation "com.google.android.material:material:$materialDesign"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayout"
