--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,8 +105,13 @@
         </activity>
 
         <activity
+            android:name="com.duckduckgo.app.tabs.ui.old.TabSwitcherActivityLegacy"
+            android:label="@string/tabActivityTitle" />
+
+        <activity
             android:name="com.duckduckgo.app.tabs.ui.TabSwitcherActivity"
             android:label="@string/tabActivityTitle" />
+
         <activity
             android:name="com.duckduckgo.app.privacy.ui.PrivacyDashboardActivity"
             android:label="@string/privacyDashboardActivityTitle"
