--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,7 +97,7 @@ ext {
     coreTesting = "2.0.0"
     androidTestRunner = "1.0.2"
     testRunner = "1.1.1"
-    coroutines = "1.3.0-RC2"
+    coroutines = "1.3.1"
 
     junit = "4.12"
     dagger = "2.18"
@@ -125,6 +125,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines"
+
     implementation "androidx.appcompat:appcompat:$androidX"
     implementation "com.google.android.material:material:$materialDesign"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayout"
