Add the possibility to install debug builds alongside release builds

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
     }
     buildTypes {
         debug {
+            applicationIdSuffix ".debug"
             pseudoLocalesEnabled false
         }
         release {
