--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,11 @@
             android:theme="@style/AppTheme.Dark.Transparent" />
 
         <activity
+            android:name="com.duckduckgo.app.onboarding.ui.OnboardingActivityExperiment"
+            android:label="@string/appName"
+            android:theme="@style/AppTheme.Dark.Transparent" />
+
+        <activity
             android:name=".BrowserActivity"
             android:label="@string/appDescription"
             android:configChanges="keyboardHidden|orientation|screenSize"
