--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,7 +111,7 @@ ext {
     rxAndroid = "2.0.2"
     timber = "4.7.1"
     rxRelay = "2.0.0"
-    leakCanary = "1.6.2"
+    leakCanary = "2.0-beta-4"
     mockito = "2.18.3"
     mockitoKotlin = "2.0.0"
     commonsMath = "3.6.1"
@@ -121,7 +121,6 @@ ext {
 dependencies {
     implementation "androidx.legacy:legacy-support-v4:$legacySupport"
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanary"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
