--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
 
         <activity
             android:name="com.duckduckgo.app.launch.LaunchActivity"
+            android:theme="@style/AppTheme.Splash"
             android:label="@string/appName">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
