--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,10 @@
 
                 <data android:scheme="https" />
                 <data android:scheme="http" />
+
+                <data android:mimeType="text/html"/>
+                <data android:mimeType="text/plain"/>
+                <data android:mimeType="application/xhtml+xml"/>
             </intent-filter>
 
             <!-- Allows apps to consume links and text shared from other apps e.g chrome -->
