Initial interstitial screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,11 @@
         </activity>
 
         <activity
+            android:name="com.duckduckgo.app.systemsearch.SystemSearchActivity"
+            android:label="@string/appName">
+        </activity>
+
+        <activity
             android:name="com.duckduckgo.app.onboarding.ui.OnboardingActivity"
             android:label="@string/appName"
             android:theme="@style/AppTheme.Dark.Transparent" />
