added manifest placeholders to decide between debug and release icons, added roundIcon for completion

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,19 @@ android {
         debug {
             applicationIdSuffix ".debug"
             pseudoLocalesEnabled false
+            manifestPlaceholders = [
+                    appIcon: "@mipmap/ic_launcher_blue",
+                    appIconRound: "@mipmap/ic_launcher_blue_round"
+            ]
         }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
+            manifestPlaceholders = [
+                    appIcon: "@mipmap/ic_launcher_red",
+                    appIconRound: "@mipmap/ic_launcher_red_round"
+            ]
         }
     }
     externalNativeBuild {
